# wgpu-monte-carlo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
examples/: benchmark.py  importance_sampling_demo.py  integration_demo.py  mcmc_demo.py  simulation_demo.py
python/wgpu_montecarlo/: __init__.py  transpiler.py
src/: distribution.rs  engine.rs  lib.rs  shader_gen.rs
tests/: test_beta_distribution.py  test_distributions.py  test_importance_sampling.py  test_integration.py  test_integrator.py  test_mcmc.py  test_simulator.py  test_transpiler.py
