[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "wgpu-montecarlo"
version = "0.1.0"
description = "GPU-accelerated Monte Carlo simulation using wgpu and PyO3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "scipy>=1.13.1"]

[project.optional-dependencies]
dev = ["pytest", "maturin"]
examples = ["matplotlib>=3.10.8"]

[tool.maturin]
python-source = "python"
module-name = "wgpu_montecarlo._core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["pytest>=8.0", "maturin>=1.8"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401", "F821"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E731", "F821"]
